# llama-turbo

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPRINT_0_REPORT.md  mac-user.md  requirements.txt
.github/workflows/: benchmark.yml  ci.yml  release.yml  sync-upstream.yml
Plans/: sprint0.md  sprint1-turboquant.md  sprint5-mlx-adapter.md
benchmark/results/: baseline.json  error_distribution.json  smoke.json
docs/: dev-journal.md  sprint1-hld.md  turboquant-algorithm.md
features/: sprint0_devops.feature  sprint0_kv_abstraction_integrity.feature  sprint0_test_integrity.feature  sprint1_math_codebook.feature  sprint1_statistical_correctness.feature  sprint3_llama_memory_i.feature  sprint4_benchmarking.feature  sprint5_ollama_pr.feature
features/backlog/: sprint0_devops.feature  sprint2_ggml_kernels.feature  sprint2_metal_perf.feature  sprint4_attention_stability.feature  sprint4_benchmark_robustness.feature  sprint4_compressed_attention.feature
features/current/: sprint0_devops.feature
scripts/: debug_turboq.py  dev.sh  mem-check.sh  run-local.sh  run-on-linux.sh  run-on-mac.sh  setup-mac.sh  smoke-test.sh  verify-release.sh
tests/: test_codebook.c  test_hd3.c  test_turboq.c  test_turboq.py  test_turboq_types.c  thresholds.json
turboq/: CMakeLists.txt  bindings.cpp  codebook.c  codebook.h  hd3.c  hd3.h  turboq-types.c  turboq-types.h  turboq.c  turboq.h
